--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,3 +29,5 @@
 @import './src/blocks/navbar-brand/navbar-brand.scss';
 @import './src/blocks/bootstrap-select/bootstrap-select.scss';
 @import './src/blocks/navbar-toggler/navbar-toggler.scss';
+@import './src/blocks/social/social.scss';
+@import './src/blocks/search-mini/search-mini.scss';
