--- a/src/blocks/btn/btn.scss
+++ b/src/blocks/btn/btn.scss
@@ -7,7 +7,7 @@
   font-size: 13px;
   outline: none !important;
   border: none;
-  transition: background 0.15s ease-in-out, color 0.15s ease-in-out,
+  transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out,
     opacity 0.15s ease-in-out;
   white-space: nowrap;
 
@@ -95,7 +95,7 @@
   }
 
   &-light {
-    box-shadow: 5px 6px 30px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
     background: white;
     border-radius: 30px;
 
@@ -104,11 +104,10 @@
 
     &:hover,
     &:focus {
-      box-shadow: 5px 6px 30px 0px rgba(0, 0, 0, 0.15);
+      box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
     }
 
     &:active {
-      // box-shadow: 5px 6px 30px 0px rgba(0, 0, 0, 0.15);
     }
 
     &:not(:disabled):not(.disabled):active {
@@ -119,7 +118,7 @@
     &:not(:disabled):not(.disabled):active:focus,
     &:not(:disabled):not(.disabled).active:focus,
     .show > &.dropdown-toggle:focus {
-      box-shadow: 5px 6px 30px 0px rgba(0, 0, 0, 0.15);
+      box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
     }
   }
 
@@ -133,7 +132,7 @@
     box-shadow: inset 0px -2px 0px 0px var(--danger);
     font-weight: 600;
     outline: none !important;
-    box-shadow: 0px 10px 15px 0px rgba(239, 93, 85, 0.5);
+    box-shadow: 0px 5px 15px 0px rgba(239, 93, 85, 0.5);
 
     @include media-breakpoint-up(md) {
     }
@@ -141,7 +140,7 @@
     &:hover,
     &:focus {
       background: var(--danger);
-      box-shadow: 0px 10px 15px 0px rgba(239, 93, 85, 0.5);
+      box-shadow: 0px 5px 15px 0px rgba(239, 93, 85, 0.5);
       opacity: 0.8;
     }
 
@@ -152,7 +151,7 @@
       background: var(--danger);
 
       &:focus {
-        box-shadow: 0px 10px 15px 0px rgba(239, 93, 85, 0.5);
+        box-shadow: 0px 5px 15px 0px rgba(239, 93, 85, 0.5);
       }
     }
   }
