--- a/src/blocks/page-footer/page-footer.scss
+++ b/src/blocks/page-footer/page-footer.scss
@@ -1,5 +1,7 @@
 .page-footer {
   $block-name: &;
+  padding-top: 75px;
+  background-color: white;
 
   @include media-breakpoint-up(xs) {
   }
@@ -25,26 +27,141 @@
     }
   }
 
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 60px;
+
+    .h4 {
+      font-weight: bold;
+      margin-bottom: 12px;
+    }
+
+    &__block {
+      &--help {
+        max-width: 425px;
+        width: 100%;
+      }
+    }
+
+    &__list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+
+      li {
+        margin-bottom: 8px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+
+        a {
+          font-weight: 500;
+          font-size: 15px;
+          color: black;
+        }
+      }
+    }
+  }
+
   &__main {
-    position: relative;
-    padding-top: 16px;
-    padding-bottom: 4px;
+    display: flex;
+    align-items: center;
+    padding: 59px 15px 64px 12px;
 
-    @include media-breakpoint-up(sm) {
-      padding-top: 9px;
-    }
-    @include media-breakpoint-up(lg) {
-      padding-bottom: 20px;
+    &__background {
+      background: rgba(0, 0, 0, 0.9);
     }
 
-    &:before {
-      content: "";
-      position: absolute;
-      top: 0px;
-      left: 0;
-      width: 100%;
-      box-shadow: 0px -8px 10px 0px rgba(0, 0, 0, 0.1);
-      height: 10px;
+    &__row {
+    }
+
+    &__logo {
+      flex: 0 0 130px;
+      margin-right: 70px;
+
+      @include media-breakpoint-up(lg) {
+        flex: 0 0 152px;
+      }
+      @include media-breakpoint-up(xl) {
+        margin-right: 47px;
+      }
+
+      &__img {
+        width: 100px;
+
+        @include media-breakpoint-up(lg) {
+          width: 139px;
+        }
+      }
+    }
+
+    &__content {
+      display: flex;
+      margin-left: auto;
+    }
+
+    &__block {
+      margin-right: 20px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      &--address {
+        max-width: 526px;
+        // width: 100%;
+        padding-right: 40px;
+      }
+      &--contacts {
+        max-width: 309px;
+        width: 100%;
+      }
+    }
+
+    p {
+      font-size: 14px;
+      margin-bottom: 5px;
+    }
+  }
+
+  &__info {
+    background: #000000;
+    box-shadow: 0px -1px 1px rgba(0, 0, 0, 0.15);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 16px;
+
+    p {
+      font-weight: 600;
+      font-size: 14px;
+      margin: 0;
+    }
+
+    a {
+    }
+
+    &__row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      min-height: 60px;
+      padding: 0 15px;
+    }
+
+    &__some {
+      display: flex;
+      align-items: center;
+
+      & > * {
+        margin-right: 40px;
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
     }
   }
 }
