--- a/src/blocks/typo/typo.scss
+++ b/src/blocks/typo/typo.scss
@@ -4,23 +4,34 @@
 .h1,
 h1 {
   @include media-breakpoint-up(lg) {
+    font-size: 48px;
   }
 }
 
 .h2,
 h2 {
+  font-size: 44px;
   @include media-breakpoint-up(lg) {
   }
 }
 
 .h3,
 h3 {
+  font-size: 26px;
   @include media-breakpoint-up(lg) {
   }
 }
 
 .h4,
 h4 {
+  font-size: 22px;
+  @include media-breakpoint-up(lg) {
+  }
+}
+
+.h4,
+h4 {
+  font-size: 20px;
   @include media-breakpoint-up(lg) {
   }
 }
@@ -37,4 +48,14 @@ a,
   &:focus {
     text-decoration: none !important;
   }
+}
+
+.text-danger {
+  color: var(--danger) !important;
+}
+
+.text-white-50 {
+}
+
+.text-black-50 {
 }
