--- a/src/blocks/page-footer/page-footer.scss
+++ b/src/blocks/page-footer/page-footer.scss
@@ -29,8 +29,14 @@
 
   &__nav {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
     padding-bottom: 60px;
+
+    @include media-breakpoint-up(lg) {
+      flex-direction: row;
+      justify-content: space-between;
+    }
 
     .h4 {
       font-weight: bold;
@@ -38,6 +44,18 @@
     }
 
     &__block {
+      margin-bottom: 30px;
+
+      @include media-breakpoint-up(lg) {
+        margin-bottom: 0;
+        padding-right: 20px;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+        padding-right: 0;
+      }
+
       &--help {
         max-width: 425px;
         width: 100%;
@@ -66,9 +84,17 @@
   }
 
   &__main {
+    padding: 59px 0 64px 0;
     display: flex;
-    align-items: center;
-    padding: 59px 15px 64px 12px;
+    flex-direction: column;
+    align-items: flex-start;
+
+    @include media-breakpoint-up(lg) {
+      margin-left: auto;
+      flex-direction: row;
+      align-items: center;
+      padding: 59px 15px 64px 12px;
+    }
 
     &__background {
       background: rgba(0, 0, 0, 0.9);
@@ -78,18 +104,19 @@
     }
 
     &__logo {
-      flex: 0 0 130px;
-      margin-right: 70px;
+      margin-bottom: 30px;
 
       @include media-breakpoint-up(lg) {
+        margin-right: 70px;
         flex: 0 0 152px;
+        margin-bottom: 0;
       }
       @include media-breakpoint-up(xl) {
         margin-right: 47px;
       }
 
       &__img {
-        width: 100px;
+        width: 90px;
 
         @include media-breakpoint-up(lg) {
           width: 139px;
@@ -99,24 +126,40 @@
 
     &__content {
       display: flex;
-      margin-left: auto;
+      flex-direction: column;
+      align-items: flex-start;
+
+      @include media-breakpoint-up(lg) {
+        flex-direction: row;
+        align-items: center;
+        margin-left: auto;
+      }
     }
 
     &__block {
-      margin-right: 20px;
+      margin-bottom: 30px;
+
+      @include media-breakpoint-up(lg) {
+        margin-right: 20px;
+        margin-bottom: 0;
+      }
 
       &:last-child {
         margin-right: 0;
+        margin-bottom: 0;
       }
 
       &--address {
-        max-width: 526px;
-        // width: 100%;
-        padding-right: 40px;
+        @include media-breakpoint-up(xl) {
+          max-width: 526px;
+          padding-right: 40px;
+        }
       }
       &--contacts {
-        max-width: 309px;
-        width: 100%;
+        @include media-breakpoint-up(xl) {
+          max-width: 309px;
+          width: 100%;
+        }
       }
     }
 
@@ -133,6 +176,10 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 16px;
+    padding: 22px 0;
+
+    @include media-breakpoint-up(lg) {
+    }
 
     p {
       font-weight: 600;
@@ -145,21 +192,49 @@
 
     &__row {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      min-height: 60px;
-      padding: 0 15px;
+      flex-direction: column;
+      align-items: flex-start;
+
+      @include media-breakpoint-up(lg) {
+        padding: 0 15px;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
+
+    &__block {
+      margin-bottom: 20px;
+
+      @include media-breakpoint-up(lg) {
+        margin-bottom: 0;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
 
     &__some {
       display: flex;
-      align-items: center;
+      flex-direction: column;
+
+      @include media-breakpoint-up(lg) {
+        flex-direction: row;
+        align-items: center;
+      }
 
       & > * {
-        margin-right: 40px;
+        margin-bottom: 20px;
+
+        @include media-breakpoint-up(lg) {
+          margin-right: 40px;
+          margin-bottom: 0;
+        }
 
         &:last-child {
           margin-right: 0;
+          margin-bottom: 0;
         }
       }
     }
