--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,3 +31,7 @@
 @import './src/blocks/navbar-toggler/navbar-toggler.scss';
 @import './src/blocks/social/social.scss';
 @import './src/blocks/search-mini/search-mini.scss';
+@import './src/blocks/main-promo/main-promo.scss';
+@import './src/blocks/search-promo/search-promo.scss';
+@import './src/blocks/card/card.scss';
+@import './src/blocks/slider-cards/slider-cards.scss';
