--- a/src/blocks/typo/typo.scss
+++ b/src/blocks/typo/typo.scss
@@ -3,6 +3,8 @@
 
 .h1,
 h1 {
+  font-weight: bold;
+
   @include media-breakpoint-up(lg) {
     font-size: 48px;
   }
@@ -10,6 +12,8 @@ h1 {
 
 .h2,
 h2 {
+  font-weight: bold;
+
   font-size: 44px;
   @include media-breakpoint-up(lg) {
   }
@@ -17,6 +21,8 @@ h2 {
 
 .h3,
 h3 {
+  font-weight: bold;
+
   font-size: 26px;
   @include media-breakpoint-up(lg) {
   }
@@ -25,6 +31,8 @@ h3 {
 .h4,
 h4 {
   font-size: 22px;
+  font-weight: bold;
+
   @include media-breakpoint-up(lg) {
   }
 }
