--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,3 +35,6 @@
 @import './src/blocks/search-promo/search-promo.scss';
 @import './src/blocks/card/card.scss';
 @import './src/blocks/slider-cards/slider-cards.scss';
+@import './src/blocks/group-main/group-main.scss';
+@import './src/blocks/card-promo/card-promo.scss';
+@import './src/blocks/map-promo/map-promo.scss';
