--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,3 +38,5 @@
 @import './src/blocks/group-main/group-main.scss';
 @import './src/blocks/card-promo/card-promo.scss';
 @import './src/blocks/map-promo/map-promo.scss';
+@import './src/blocks/partners-promo/partners-promo.scss';
+@import './src/blocks/slider-partners/slider-partners.scss';
