--- a/src/blocks/card-promo/card-promo.scss
+++ b/src/blocks/card-promo/card-promo.scss
@@ -5,9 +5,16 @@
   align-items: center;
   border-left: 5px solid #f85b51;
   height: 210px;
-  padding: 10px 40px;
+  padding: 10px 20px;
   box-shadow: 0px 6px 30px #d6d7da;
   margin-bottom: 30px;
+  background-color: white;
+
+  @include media-breakpoint-up(md) {
+  }
+  @include media-breakpoint-up(xl) {
+    padding: 10px 40px;
+  }
 
   &__description {
   }
