--- a/src/blocks/map-promo/map-promo.scss
+++ b/src/blocks/map-promo/map-promo.scss
@@ -4,10 +4,13 @@
   background-color: #f7f6f4;
   position: relative;
   overflow: hidden;
-  margin-top: -88px;
+  z-index: -1;
 
   @include media-breakpoint-up(lg) {
     display: block;
+    margin-top: -88px;
+  }
+  @include media-breakpoint-up(xl) {
   }
 
   &__img {
