--- a/src/blocks/navbar-collapse/navbar-collapse.scss
+++ b/src/blocks/navbar-collapse/navbar-collapse.scss
@@ -6,8 +6,10 @@
     align-items: flex-end;
     margin-top: 20px;
 
+    margin: 20px -15px 0px -15px;
+
     @include media-breakpoint-up(lg) {
-      margin-top: 0;
+      margin: 0;
     }
   }
 }
