--- a/src/blocks/navbar-nav/navbar-nav.scss
+++ b/src/blocks/navbar-nav/navbar-nav.scss
@@ -4,10 +4,12 @@
   &--header {
     margin-left: auto;
     margin-top: 30px;
+    padding-bottom: 30px;
     text-align: center;
 
     @include media-breakpoint-up(lg) {
       padding-right: 8px;
+      padding-bottom: 0;
       margin-top: 20px;
       text-align: left;
     }
