--- a/src/blocks/partners-promo/partners-promo.scss
+++ b/src/blocks/partners-promo/partners-promo.scss
@@ -1,4 +1,10 @@
 .partners-promo {
   $block-name: &; // #{$block-name}__element {}
-  padding-top: 175px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  @include media-breakpoint-up(lg) {
+    padding-top: 175px;
+    padding-bottom: 179px;
+  }
 }
