--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,3 +40,5 @@
 @import './src/blocks/map-promo/map-promo.scss';
 @import './src/blocks/partners-promo/partners-promo.scss';
 @import './src/blocks/slider-partners/slider-partners.scss';
+@import './src/blocks/news-catalog/news-catalog.scss';
+@import './src/blocks/promo-catalog/promo-catalog.scss';
