--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,3 +49,5 @@
 @import './src/blocks/custom-checkbox/custom-checkbox.scss';
 @import './src/blocks/calendar/calendar.scss';
 @import './src/blocks/input-group/input-group.scss';
+@import './src/blocks/link-target/link-target.scss';
+@import './src/blocks/table/table.scss';
