--- a/src/blocks/insurance-artilce/insurance-artilce.scss
+++ b/src/blocks/insurance-artilce/insurance-artilce.scss
@@ -36,4 +36,37 @@
       margin-bottom: 41px;
     }
   }
+
+  &__edit {
+    background: #ffffff;
+    box-shadow: 0px 6px 30px #d6d7da;
+    border-left: 5px solid var(--danger);
+    padding: 15px;
+    margin-bottom: 80px;
+
+    @include media-breakpoint-up(md) {
+      padding: 30px 30px;
+    }
+    @include media-breakpoint-up(lg) {
+      padding: 79px 96px 79px 96px;
+    }
+
+    .link-target {
+      margin-bottom: 42px;
+    }
+  }
+
+  &__sign {
+    max-width: 519px;
+    margin: 0 auto;
+  }
+
+  &__total {
+    margin-top: 58px;
+    text-align: center;
+
+    .btn {
+      min-width: 280px;
+    }
+  }
 }
