--- a/src/blocks/steps/steps.scss
+++ b/src/blocks/steps/steps.scss
@@ -46,9 +46,21 @@
       background: #f26120;
     }
 
-    &.is-completed #{$block-name}__marker {
-      background: #f26120;
-      border: 4px solid #f26120;
+    &.is-completed {
+      padding-left: 0;
+      margin-left: 0;
+
+      #{$block-name} {
+        &__marker {
+          // background: #f85b51;
+          // border: 4px solid #f85b51;
+          // color: white;
+          // box-shadow: 0px 5px 15px 0px rgba(248, 91, 81, 0.5);
+        }
+        &__title {
+          color: black;
+        }
+      }
     }
 
     &.is-active:not(:first-child)::before {
@@ -56,8 +68,8 @@
     }
 
     &.is-active {
-      margin-left: 0;
-      padding-left: 0;
+      // margin-left: 0;
+      // padding-left: 0;
 
       #{$block-name} {
         &__marker {
@@ -70,6 +82,11 @@
         &__title {
           color: black;
         }
+      }
+
+      &:nth-child(1) {
+        padding-left: 0;
+        margin-left: 0;
       }
     }
 
