--- a/src/blocks/navbar-collapse/navbar-collapse.scss
+++ b/src/blocks/navbar-collapse/navbar-collapse.scss
@@ -4,12 +4,12 @@
   &--header {
     flex-direction: column;
     align-items: flex-end;
-    margin-top: 20px;
-
-    margin: 20px -15px 0px -15px;
+    margin: 0px -15px 0px -15px;
+    padding-top: 20px;
 
     @include media-breakpoint-up(lg) {
       margin: 0;
+      padding-top: 0;
     }
   }
 }
