--- a/src/blocks/navbar/navbar.scss
+++ b/src/blocks/navbar/navbar.scss
@@ -3,6 +3,7 @@
 
   &--header {
     padding: 0;
+    background-color: transparent !important;
 
     @include media-breakpoint-up(lg) {
       align-items: flex-start;
