--- a/src/blocks/partners-promo/partners-promo.scss
+++ b/src/blocks/partners-promo/partners-promo.scss
@@ -7,4 +7,12 @@
     padding-top: 175px;
     padding-bottom: 179px;
   }
+
+  &__description {
+    max-width: 250px;
+  }
+
+  &__text {
+    font-size: 22px;
+  }
 }
