--- a/src/blocks/typo/typo.scss
+++ b/src/blocks/typo/typo.scss
@@ -58,6 +58,14 @@ a,
   }
 }
 
+.font-alter {
+  font-family: $font-alternative;
+}
+
+.text-dark {
+  color: black !important;
+}
+
 .text-danger {
   color: var(--danger) !important;
 }
