--- a/src/blocks/bootstrap-select/bootstrap-select.scss
+++ b/src/blocks/bootstrap-select/bootstrap-select.scss
@@ -41,6 +41,12 @@
       font-size: 15px;
       padding-right: 22px;
       height: 44px;
+
+      .filter-option {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+      }
     }
 
     .dropdown-menu {
