--- a/src/blocks/group-main/group-main.scss
+++ b/src/blocks/group-main/group-main.scss
@@ -8,12 +8,26 @@
 
   &__description {
     margin: 0 auto;
-    max-width: 800px;
+    max-width: 850px;
     width: 100%;
     font-weight: 800;
     font-size: 20px;
     line-height: 160%;
     margin-bottom: 59px;
+  }
+
+  &__row {
+    @include media-breakpoint-up(lg) {
+      margin-left: -20px;
+      margin-right: -20px;
+    }
+
+    & > [class*="col"] {
+      @include media-breakpoint-up(lg) {
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+    }
   }
 
   &__card {
