--- a/src/blocks/page-header/page-header.scss
+++ b/src/blocks/page-header/page-header.scss
@@ -131,11 +131,12 @@
     font-size: 16px;
     padding-left: 16px;
     letter-spacing: -0.3px;
-    margin-right: 15px;
+    margin-right: 11px;
     display: none;
 
     @include media-breakpoint-up(xl) {
-      display: block;
+      display: flex;
+      align-items: center;
     }
   }
 
@@ -168,6 +169,12 @@
       border-color: white;
 
       .navbar-toggler-icon {
+      }
+    }
+
+    .btn-select {
+      .dropdown-toggle {
+        color: var(--danger) !important;
       }
     }
   }
