--- a/src/blocks/steps/steps.scss
+++ b/src/blocks/steps/steps.scss
@@ -52,10 +52,6 @@
 
       #{$block-name} {
         &__marker {
-          // background: #f85b51;
-          // border: 4px solid #f85b51;
-          // color: white;
-          // box-shadow: 0px 5px 15px 0px rgba(248, 91, 81, 0.5);
         }
         &__title {
           color: black;
@@ -68,16 +64,15 @@
     }
 
     &.is-active {
-      // margin-left: 0;
-      // padding-left: 0;
-
       #{$block-name} {
         &__marker {
           background: #f85b51;
-          border: 4px solid #f85b51;
+          // border: 4px solid #f85b51;
+          box-shadow: inset 0px 0px 0px 2px #f85b51,
+            0px 5px 15px 0px rgba(248, 91, 81, 0.5);
           border-top: none;
           color: white;
-          box-shadow: 0px 5px 15px 0px rgba(248, 91, 81, 0.5);
+          // box-shadow: 0px 5px 15px 0px rgba(248, 91, 81, 0.5);
         }
         &__title {
           color: black;
@@ -105,6 +100,7 @@
   &__marker {
     width: 60px;
     height: 60px;
+    font-family: $font-alternative;
     display: -ms-flexbox;
     display: flex;
     align-items: center;
@@ -113,9 +109,11 @@
     justify-content: center;
     background: white;
     color: #999999;
-    border: 2px solid #999999;
+    // border: 2px solid #999999;
+    box-shadow: inset 0px 0px 0px 2px #999999;
     font-weight: bold;
     font-size: 35px;
     z-index: 1;
+    // padding-bottom: 3px;
   }
 }
