--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,9 @@
 // font
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600&display=swap");
 $font-raleway: "Raleway", sans-serif;
+$font-alternative: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $font-family: $font-raleway;
 
 $grid-columns: 12;
