--- a/src/blocks/main-promo/main-promo.scss
+++ b/src/blocks/main-promo/main-promo.scss
@@ -14,6 +14,8 @@
   @include media-breakpoint-up(xl) {
     background-position: center;
   }
+  @include media-breakpoint-up(xl) {
+  }
 
   &__block {
     margin: 0 auto;
