Fix: add alter font for all input

--- a/src/blocks/form-control/form-control.scss
+++ b/src/blocks/form-control/form-control.scss
@@ -1,5 +1,6 @@
 .form-control {
   $block-name: &; // #{$block-name}__element {}
+  font-family: $font-alternative;
   padding: 8px 30px 8px 0px;
   height: auto;
   border: none;
